--- a/Slides/DashboardingSlides.html
+++ b/Slides/DashboardingSlides.html
@@ -129,46 +129,23 @@ slides > slide:not(.nobackground):before {
 }
 
 
+
 </style>
 
 <slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Why bother?</h2></hgroup><article  id="why-bother" class="smaller ">
 
 </article></slide><slide class=""><hgroup><h2>Why should you DLAB?</h2></hgroup><article  id="why-should-you-dlab" class="smaller flexbox vcenter">
 
-<ul class = 'build'>
-<li>Pretty!</li>
-</ul>
-
-<ul class = 'build'>
-<li>Organized</li>
-</ul>
-
-<ul class = 'build'>
-<li>Interactive</li>
-</ul>
-
-<ul class = 'build'>
-<li>Reproducible</li>
-</ul>
-
-<ul class = 'build'>
-<li>Free</li>
-</ul>
-
-<ul class = 'build'>
-<li><em>You get to use R</em></li>
-</ul>
-
-<ul class = 'build'>
-<li>Flexible</li>
-</ul>
-
-<ul class = 'build'>
-<li>Better visualizations (sorry gg)</li>
-</ul>
-
-<ul class = 'build'>
-<li>People will respect you</li>
+<ul>
+<li><p>Pretty!</p></li>
+<li><p>Organized</p></li>
+<li><p>Interactive</p></li>
+<li><p>Reproducible</p></li>
+<li><p>Free</p></li>
+<li><p><em>You get to use R</em></p></li>
+<li><p>Flexible</p></li>
+<li><p>Better visualizations (sorry gg)</p></li>
+<li><p>People will respect you</p></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>How to DLAB?</h2></hgroup><article  id="how-to-dlab" class="smaller flexbox vcenter">
